tests/ifcc-test-output/testfiles-functions-void_error_declaration_param2/gcc-compile.txt
input.c: In function ‘main’:
input.c:8:5: error: too many arguments to function ‘func’
    8 |     func(a, b, c);
      |     ^~~~
input.c:1:6: note: declared here
    1 | void func(int a, int b){}
      |      ^~~~

return code: 1
